增加基于应用登录获取身份并优化相关API